Updated header, nav, and about section

--- a/index.html
+++ b/index.html
@@ -9,25 +9,43 @@
     <body>
         <!-- Header -->
         <header>
+            <!-- Logo -->
             <div class="logo">
-                <h1>Joshua Cavell</h1>
+                <a href="index.html"><h1>Joshua Cavell</h1></a>
             </div>
-            <!-- Navbar -->
+            <!-- Navigation -->
             <nav>
-                <span><a href="#">About Me</a></span>
-                <span><a href="#">Work</a></span>
-                <span><a href="#">Contact Me</a></span>
-                <span><a href="#">Resume</a></span>
+                <span><a href="#about">About Me</a></span>
+                <span><a href="#work">Work</a></span>
+                <span><a href="#contact">Contact Me</a></span>
+                <span><a href="#resume">Resume</a></span>
             </nav>
         </header>
+        <!-- Main -->
         <main>
-            <aside>
-                <img
-                    src="./assets/images/avatar.jpg"
-                    alt="Image by catalyststuff on Freepik"
-                    class="avatar"
-                />
-            </aside>
+            <section>
+                <!-- Avatar -->
+                <div class="avatar-block">
+                    <img
+                        src="./assets/images/avatar.jpg"
+                        alt="Image by catalyststuff on Freepik"
+                        class="avatar"
+                    />
+                </div>
+                <div class="description">
+                    <div id="about">
+                        <h2>Hi, I'm Joshua Cavell</h2>
+                        <p>
+                            I'm a full-stack web developer with a background in
+                            Sales, Customer Service, and a passion for learning.
+                            I'm currently enrolled in Michigan State
+                            University's Full-Stack Web Development Bootcamp.
+                            I'm looking for opportunities to apply my skills and
+                            grow as a developer.
+                        </p>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 </html>
