Added a responsive dummy work section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         </header>
         <!-- Main -->
         <main>
-            <section>
+            <!-- About Section -->
+            <section id="about">
                 <!-- Avatar -->
                 <div class="avatar-block">
                     <img
@@ -33,7 +34,7 @@
                     />
                 </div>
                 <div class="description">
-                    <div id="about">
+                    <div id="about-content">
                         <h2>Hi, I'm Joshua Cavell</h2>
                         <p>
                             I'm a full-stack web developer with a background in
@@ -44,6 +45,17 @@
                             grow as a developer.
                         </p>
                     </div>
+                </div>
+            </section>
+            <!-- Work Section -->
+            <section id="work">
+                <h2>Here are a few projects I've created.</h2>
+                <div id="cards">
+                    <div class="card">blah blah</div>
+                    <div class="card">blah blah</div>
+                    <div class="card">blah blah</div>
+                    <div class="card">blah blah</div>
+                    <div class="card">blah blah</div>
                 </div>
             </section>
         </main>
