--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
                 <span><a href="#about">About Me</a></span>
                 <span><a href="#work">Work</a></span>
                 <span><a href="#contact">Contact Me</a></span>
-                <span><a href="#resume">Resume</a></span>
             </nav>
         </header>
         <!-- Main -->
@@ -57,6 +56,20 @@
                     <div class="card">blah blah</div>
                     <div class="card">blah blah</div>
                 </div>
+            </section>
+            <!-- Contact Section -->
+            <section id="contact">
+                <h2>Get in touch</h2>
+                <p>
+                    I'm currently looking for opportunities to apply my skills
+                    and grow as a developer. If you have any questions, or would
+                    like to work together, please contact me.
+                </p>
+                <form
+                    action="mailto:xclusive36+guild@gmail.com"
+                >
+                    <button type="submit">Email me</button>
+                </form>
             </section>
         </main>
     </body>
