Added some spit and polish

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </div>
                 <div class="description">
                     <div id="about-content">
-                        <h2>Hi, I'm Joshua Cavell</h2>
+                        <h2>Hello, I'm Joshua Cavell</h2>
                         <p>
                             I'm a full-stack web developer with a background in
                             Sales, Customer Service, and a passion for learning.
@@ -50,11 +50,50 @@
             <section id="work">
                 <h2>Here are a few projects I've created.</h2>
                 <div id="cards">
-                    <div class="card">blah blah</div>
-                    <div class="card">blah blah</div>
-                    <div class="card">blah blah</div>
-                    <div class="card">blah blah</div>
-                    <div class="card">blah blah</div>
+                    <div class="card">
+                        <h3>LiteStep App</h3>
+                        <a
+                            href="https://apps.apple.com/us/app/litestep/id1490896776"
+                            target="_blank"
+                        >
+                            <img
+                                class="card-images"
+                                src="./assets/images/litestep.webp"
+                                alt="LiteStep Picklist App"
+                        /></a>
+                    </div>
+                    <div class="card">
+                        <h3>Misfitgirl.com</h3>
+                        <a href="https://misfitgirl.com" target="_blank">
+                            <img
+                                class="card-images"
+                                src="./assets/images/misfitgirl.png"
+                                alt="MisfitGirl.com Wax melts"
+                            />
+                        </a>
+                    </div>
+                    <div class="card">
+                        <h3>Minesweeper Web App</h3>
+                        <a
+                            href="https://stirring-parfait-06fd3c.netlify.app/"
+                            target="_blank"
+                            ><img
+                                class="card-images"
+                                src="./assets/images/minesweeper.png"
+                                alt="React Minesweeper Game"
+                        /></a>
+                    </div>
+                    <div class="card">
+                        <h3>PasswordGoblin App</h3>
+                        <a
+                            href="https://github.com/xclusive36/passwordGoblin"
+                            target="_blank"
+                            ><img
+                                class="card-images"
+                                src="./assets/images/passwordGoblin.png"
+                                alt="Password Goblin App and generator"
+                        /></a>
+                    </div>
                 </div>
             </section>
             <!-- Contact Section -->
@@ -65,12 +104,11 @@
                     and grow as a developer. If you have any questions, or would
                     like to work together, please contact me.
                 </p>
-                <form
-                    action="mailto:xclusive36+guild@gmail.com"
-                >
+                <form action="mailto:xclusive36+guild@gmail.com">
                     <button type="submit">Email me</button>
                 </form>
             </section>
         </main>
+        <footer>Thank you for visiting!</footer>
     </body>
 </html>
