added mavp to portfolio

--- a/index.html
+++ b/index.html
@@ -51,14 +51,26 @@
                 <h2>Here are a few projects I've created.</h2>
                 <div id="cards">
                     <div class="card">
-                        <h3>LiteStep App</h3>
+                        <h3>LiteStep iOS App</h3>
                         <a
                             href="https://apps.apple.com/us/app/litestep/id1490896776"
                             target="_blank"
                         >
                             <img
-                                class="card-images"
+                                class="card-images large-image"
                                 src="./assets/images/litestep.webp"
+                                alt="LiteStep Picklist App"
+                        /></a>
+                    </div>
+                    <div class="card">
+                        <h3>My Awesome Volunteer Portal</h3>
+                        <a
+                            href="https://github.com/erin-m-keller/project-one"
+                            target="_blank"
+                        >
+                            <img
+                                class="card-images"
+                                src="./assets/images/mavp.png"
                                 alt="LiteStep Picklist App"
                         /></a>
                     </div>
