updated mavp to vf

--- a/index.html
+++ b/index.html
@@ -63,15 +63,15 @@
                         /></a>
                     </div>
                     <div class="card">
-                        <h3>My Awesome Volunteer Portal</h3>
+                        <h3>Volunteer Finder</h3>
                         <a
-                            href="https://github.com/erin-m-keller/project-one"
+                            href="https://github.com/erin-m-keller/volunteer-finder"
                             target="_blank"
                         >
                             <img
                                 class="card-images"
-                                src="./assets/images/mavp.png"
-                                alt="LiteStep Picklist App"
+                                src="./assets/images/vf.png"
+                                alt="Volunteer Finder"
                         /></a>
                     </div>
                     <div class="card">
