added scripts.js, set projects html to be generated in scripts.js

--- a/index.html
+++ b/index.html
@@ -1,126 +1,69 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Portfolio Website</title>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" type="text/css" href="./assets/css/styles.css" />
-    </head>
-    <body>
-        <!-- Header -->
-        <header>
-            <!-- Logo -->
-            <div class="logo">
-                <a href="index.html"><h1>Joshua Cavell</h1></a>
-            </div>
-            <!-- Navigation -->
-            <nav>
-                <span><a href="#about">About Me</a></span>
-                <span><a href="#work">Work</a></span>
-                <span><a href="#contact">Contact Me</a></span>
-            </nav>
-        </header>
-        <!-- Main -->
-        <main>
-            <!-- About Section -->
-            <section id="about">
-                <!-- Avatar -->
-                <div class="avatar-block">
-                    <img
-                        src="./assets/images/avatar.jpg"
-                        alt="Image by catalyststuff on Freepik"
-                        class="avatar"
-                    />
-                </div>
-                <div class="description">
-                    <div id="about-content">
-                        <h2>Hello, I'm Joshua Cavell</h2>
-                        <p>
-                            I'm a full-stack web developer with a background in
-                            Sales, Customer Service, and a passion for learning.
-                            I'm currently enrolled in Michigan State
-                            University's Full-Stack Web Development Bootcamp.
-                            I'm looking for opportunities to apply my skills and
-                            grow as a developer.
-                        </p>
-                    </div>
-                </div>
-            </section>
-            <!-- Work Section -->
-            <section id="work">
-                <h2>Here are a few projects I've created.</h2>
-                <div id="cards">
-                    <div class="card">
-                        <h3>LiteStep iOS App</h3>
-                        <a
-                            href="https://apps.apple.com/us/app/litestep/id1490896776"
-                            target="_blank"
-                        >
-                            <img
-                                class="card-images large-image"
-                                src="./assets/images/litestep.webp"
-                                alt="LiteStep Picklist App"
-                        /></a>
-                    </div>
-                    <div class="card">
-                        <h3>Volunteer Finder</h3>
-                        <a
-                            href="https://github.com/erin-m-keller/volunteer-finder"
-                            target="_blank"
-                        >
-                            <img
-                                class="card-images"
-                                src="./assets/images/vf.png"
-                                alt="Volunteer Finder"
-                        /></a>
-                    </div>
-                    <div class="card">
-                        <h3>Misfitgirl.com</h3>
-                        <a href="https://misfitgirl.com" target="_blank">
-                            <img
-                                class="card-images"
-                                src="./assets/images/misfitgirl.png"
-                                alt="MisfitGirl.com Wax melts"
-                            />
-                        </a>
-                    </div>
-                    <div class="card">
-                        <h3>Minesweeper Web App</h3>
-                        <a
-                            href="https://stirring-parfait-06fd3c.netlify.app/"
-                            target="_blank"
-                            ><img
-                                class="card-images"
-                                src="./assets/images/minesweeper.png"
-                                alt="React Minesweeper Game"
-                        /></a>
-                    </div>
-                    <div class="card">
-                        <h3>PasswordGoblin App</h3>
-                        <a
-                            href="https://github.com/xclusive36/passwordGoblin"
-                            target="_blank"
-                            ><img
-                                class="card-images"
-                                src="./assets/images/passwordGoblin.png"
-                                alt="Password Goblin App and generator"
-                        /></a>
-                    </div>
-                </div>
-            </section>
-            <!-- Contact Section -->
-            <section id="contact">
-                <h2>Get in touch</h2>
-                <p>
-                    I'm currently looking for opportunities to apply my skills
-                    and grow as a developer. If you have any questions, or would
-                    like to work together, please contact me.
-                </p>
-                <form action="mailto:xclusive36+guild@gmail.com">
-                    <button type="submit">Email me</button>
-                </form>
-            </section>
-        </main>
-        <footer>Thank you for visiting!</footer>
-    </body>
+  <head>
+    <title>Portfolio Website</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" type="text/css" href="./assets/css/styles.css" />
+  </head>
+  <body>
+    <!-- Header -->
+    <header>
+      <!-- Logo -->
+      <div class="logo">
+        <a href="index.html"><h1>Joshua Cavell</h1></a>
+      </div>
+      <!-- Navigation -->
+      <nav>
+        <span><a href="#about">About Me</a></span>
+        <span><a href="#work">Work</a></span>
+        <span><a href="#contact">Contact Me</a></span>
+      </nav>
+    </header>
+    <!-- Main -->
+    <main>
+      <!-- About Section -->
+      <section id="about">
+        <!-- Avatar -->
+        <div class="avatar-block">
+          <img
+            src="./assets/images/avatar.jpg"
+            alt="Image by catalyststuff on Freepik"
+            class="avatar"
+          />
+        </div>
+        <div class="description">
+          <div id="about-content">
+            <h2>Hello, I'm Joshua Cavell</h2>
+            <p>
+              I'm a full-stack web developer with a background in Sales,
+              Customer Service, and a passion for learning. I'm currently
+              enrolled in Michigan State University's Full-Stack Web Development
+              Bootcamp. I'm looking for opportunities to apply my skills and
+              grow as a developer.
+            </p>
+          </div>
+        </div>
+      </section>
+      <!-- Work Section -->
+      <section id="work">
+        <h2>Here are a few projects I've created.</h2>
+        <div id="cards" />
+      </section>
+      <!-- Contact Section -->
+      <section id="contact">
+        <h2>Get in touch</h2>
+        <p>
+          I'm currently looking for opportunities to apply my skills and grow as
+          a developer. If you have any questions, or would like to work
+          together, please contact me.
+        </p>
+        <form action="mailto:xclusive36+guild@gmail.com">
+          <button type="submit">Email me</button>
+        </form>
+      </section>
+    </main>
+    <footer>Thank you for visiting!</footer>
+    <script src="./assets/js/scripts.js"></script>
+  </body>
 </html>
